--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ li {
   flex-direction: column;
   padding: 3rem 1.5rem;
   position: relative;
-  background-image: url(./assets/dot.svg);
+  /* background-image: url(./assets/dot.svg); */
 }
 
 .profile .profile-avatar img {
@@ -782,15 +782,14 @@ input {
   overflow: hidden;
 }
 
-.contact img{
+.contact img {
   position: relative;
-  width: 100%;
+  width: min(90%, 100%);
   display: flex;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 3;
-  
 }
 
 .contact .frame {
@@ -821,11 +820,11 @@ input {
 .contact .button a {
   border-radius: 1rem;
   color: var(--neutral-100);
-  width: 10rem;
+  width: 12rem;
   padding: 0.7rem;
   display: flex;
   justify-content: center;
-  background: lightpink;
+  background: rgba(255, 255, 255, 0.2);
   transition: 0.3s;
   position: relative;
 }
@@ -841,9 +840,7 @@ input {
   align-items: center;
   justify-content: space-evenly;
   text-align: center;
-
 }
-
 
 /* --------------- SMALL DISPLAYS --------------- */
 
@@ -890,6 +887,16 @@ input {
   }
   .moon {
     width: -webkit-fill-available;
+  }
+
+  .contact img {
+    position: relative;
+    width: max(50%, 50%);
+    display: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
   }
 }
 
@@ -1052,22 +1059,15 @@ input {
     bottom: 10px;
   }
 
-  
-
-  .contact img{
+  .contact img {
     position: relative;
-    width: 86%;
+    width: min(86%, 100%);
     display: flex;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 3;
   }
-
-
-
-
-
 
   .select-mode .avatar img {
     width: 115px;
@@ -1199,9 +1199,8 @@ input {
       top: 9.8rem;
       opacity: 1;
     }
-  
+  }
 }
-
 /*-----------------DARK MODE -------------------*/
 
 body.dark {
