--- a/style.css
+++ b/style.css
@@ -790,34 +790,27 @@ input {
 }
 
 .contact img {
-  position: relative;
-  width: min(100%, 100%);
+  position: absolute;
+  width: 170px;
+  max-width: 177px;
   display: flex;
   top: 50.5%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  background-size: cover;
-  /* z-index: 3; */
 }
 
 .contact .frame {
-  /* width: min(130px, 220px); 140px */
-  /* height: min(155px, 200px); 170px */
-  width: 126px;
-  height: 152px;
+  width: 123px;
+  height: 150px;
   display: flex;
-  border-radius: 3.6rem;
+  border-radius: 35px;
   padding: 10px;
   overflow: hidden;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  position: absolute;
-  background-color: blue;
-  /* z-index: 1; */
+  position: relative;
+  background-color: lightskyblue;
 }
 
 .contact .button {
@@ -903,13 +896,12 @@ input {
   }
 
   .contact img {
-    position: relative;
-    width: max(50%, 50%);
+    position: absolute;
+    width: 185px;
     display: flex;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* z-index: 3; */
   }
 }
 
@@ -1073,12 +1065,12 @@ input {
   }
 
   .contact .frame {
-    width: 143px;
-    height: 176px;
+    width: 130px;
+    height: 160px;
   }
 
   .contact img {
-    position: relative;
+    position: absolute;
     width: min(100%, 100%); /*86%*/
     display: flex;
     flex-direction: column;
