--- a/style.css
+++ b/style.css
@@ -573,7 +573,8 @@ li {
 }
 
 .mail .img img {
-  width: 340px;
+  width: 280px;
+  max-width: 340px;
 }
 
 .button-copy {
@@ -924,13 +925,77 @@ input {
 
 @media (min-width: 1024px) {
   .apple-grid {
+    background-color: #feef88;
     margin: 0 auto;
-    height: fit-content;
+    height: 100vh;
     padding: 1rem;
-    grid-template-columns: 0.6fr 0.6fr 2.2fr 0.6fr 0.5fr;
-    grid-template-rows: 0.3fr 0.3fr 0.2fr 0.9fr 1.3fr 1fr 1fr;
+    /* padding-inline: 2rem; */
+    grid-template-columns: 0.7fr 0.6fr 2.2fr 0.6fr 0.9fr;
+    grid-template-rows: 0.8fr 0.9fr 0.2fr 0.6fr 1fr 1fr 1fr;
     grid-auto-flow: row;
-    grid-template-areas: '';
+    grid-template-areas:
+      'profile profile hello stacks stacks'
+      'profile profile hello stacks stacks'
+      'profile profile projects stacks stacks'
+      'profile profile projects mail mail'
+      'profile profile projects mail mail'
+      'profile profile projects select-mode contact'
+      'resume resume projects select-mode contact';
+  }
+
+  .profile {
+    padding: 1rem 1.5rem;
+  }
+
+  .profile .profile-avatar::before {
+    width: 14rem;
+    height: 14rem;
+  }
+
+  .profile .profile-avatar img {
+    width: 10rem;
+  }
+
+  .profile .profile-name {
+    width: 26rem;
+  }
+
+  .profile .profile-name h1 {
+    font-size: 2.6rem;
+    padding-top: 2rem;
+  }
+
+  .profile .profile-name .role {
+    font-size: 1.8rem;
+  }
+
+  .profile .profile-about p {
+    font-size: 1.6rem;
+    padding-inline: 0;
+    letter-spacing: 0;
+    line-height: 18px;
+  }
+
+  .resume a {
+    font-size: 2.7rem;
+  }
+
+  .stacks .ico {
+    width: 4rem;
+    height: 4rem;
+  }
+
+  .stacks .description p {
+    padding: 1rem;
+  }
+
+  .select-mode .avatar img {
+    width: 120px;
+  }
+
+  .select-mode .sun,
+  .moon {
+    width: 350px;
   }
 }
 
