--- a/style.css
+++ b/style.css
@@ -568,14 +568,15 @@ li {
 }
 
 .mail .img {
+  width: 90%;
   position: absolute;
-  top: 45%;
+  top: 40%;
   transform: translateY(-60%);
 }
 
 .mail .img img {
-  width: 280px;
-  max-width: 340px;
+  width: 100%;
+  max-width: 100%;
 }
 
 .button-copy {
