--- a/style.css
+++ b/style.css
@@ -36,6 +36,17 @@ body {
   --midnight-sky: #172334;
   --border-radius: 2.4rem;
 }
+/* #preloader {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  z-index: 100;
+  background-color: #0f0f0f;
+  flex-direction: column;
+} */
 
 .loader_bg {
   display: flex;
@@ -43,36 +54,33 @@ body {
   justify-content: center;
   flex-direction: column;
   gap: 4rem;
-
   position: fixed;
   z-index: 9999;
   background-color: var(--neutral-100);
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
-.loader {
+#loader {
   display: flex;
   align-items: center;
-
   position: relative;
-  height: 1rem;
+  height: 6px;
   width: 250px;
   background-color: var(--neutral-400);
-  border: 1px solid var(--neutral-400);
+  border: none;
   border-radius: 1rem;
 }
 
-.loader .progress-bar {
-  margin-inline: 0.1rem;
+#loader #progress {
   background-color: #fff;
-  width: 0px;
-  height: 0.6rem;
+  width: 0;
+  height: 6px;
   border-radius: 1rem;
-  animation: progress 5s forwards linear;
+  /* animation: progress 5s forwards linear; */
 }
 
-@keyframes progress {
+/* @keyframes progress {
   0% {
     width: 0;
   }
@@ -112,7 +120,7 @@ body {
   100% {
     width: 100%;
   }
-}
+} */
 
 /* p {
   font-size: 1.6rem;
@@ -1355,7 +1363,7 @@ body.dark {
   font-weight: 300;
 }
 
-.stacks .description p {
+.dark .stacks .description p {
   color: rgba(255, 255, 255, 0.6);
 }
 
