--- a/style.css
+++ b/style.css
@@ -827,6 +827,8 @@ input {
 }
 
 .contact .frame {
+  display: flex;
+  flex-direction: column;
   width: 123px;
   height: 150px;
   display: flex;
@@ -838,6 +840,22 @@ input {
   transform: translate(-50%, -50%);
   position: relative;
   background-color: black;
+}
+
+.contact .frame .clock {
+  display: flex;
+  justify-content: space-between;
+  font-weight: 500;
+  align-items: center;
+}
+
+.clock span:nth-child(1) {
+  color: #24a7ff;
+  font-size: 1.2rem;
+}
+.clock span:nth-child(2) {
+  color: white;
+  font-weight: 400;
 }
 
 .contact .button {
@@ -852,7 +870,7 @@ input {
 
 .contact .button a {
   border-radius: 8px;
-  width: 11rem;
+  width: 11.5rem;
   padding: 0.6rem;
   display: flex;
   /* justify-content: center; */
@@ -1037,8 +1055,45 @@ input {
 }
 
 /* --------------- MEDIUM DISPLAYS --------------- */
-
 @media (min-width: 1366px) {
+  .apple-grid {
+    padding: 2rem 6rem;
+    display: grid;
+    place-content: center;
+    gap: 1rem;
+    grid-template-columns: 0.5fr 1fr 0.5fr 2.2fr 0.6fr 0.9fr;
+    grid-template-rows: 1fr 1fr 0.4fr 0.9fr 1.3fr 1fr 1fr;
+    grid-auto-flow: row;
+    grid-template-areas:
+      'profile profile brand hello stacks stacks'
+      'profile profile welcome hello stacks stacks'
+      'profile profile projects projects stacks stacks'
+      'profile profile projects projects mail mail'
+      'profile profile projects projects mail mail'
+      'profile profile projects projects select-mode contact'
+      'resume resume projects projects select-mode contact';
+  }
+  .brand,
+  .welcome {
+    display: flex;
+  }
+  .brand {
+    align-items: center;
+    justify-content: center;
+    padding-left: 7px;
+  }
+
+  .profile .profile-about p {
+    font-size: 1.6rem;
+    padding-inline: 2rem;
+    padding-top: 2rem;
+  }
+
+  .select-mode .avatar img {
+    width: 100%;
+  }
+}
+@media (min-width: 1440px) {
   .apple-grid {
     max-width: 150rem;
     height: 100vh;
@@ -1372,7 +1427,7 @@ body.dark {
 }
 
 .dark .stacks .description p {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .dark .stacks .ico,
