--- a/style.css
+++ b/style.css
@@ -260,6 +260,7 @@ li {
 .profile .profile-about p {
   color: var(--neutral-400);
   padding-top: 2.3rem;
+  padding-inline: 2rem;
   font-size: 2rem;
   font-style: normal;
   font-weight: 300;
@@ -274,7 +275,7 @@ li {
 }
 
 .resume a {
-  font-size: 3.5rem;
+  font-size: 4rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -833,7 +834,7 @@ input {
   height: 150px;
   display: flex;
   border-radius: 35px;
-  padding: 10px;
+  padding: 8px 10px;
   overflow: hidden;
   top: 50%;
   left: 50%;
@@ -961,6 +962,7 @@ input {
     height: 100vh;
     padding: 1rem;
     /* padding-inline: 2rem; */
+    overflow: hidden;
     grid-template-columns: 0.7fr 0.6fr 2.2fr 0.6fr 0.9fr;
     grid-template-rows: 0.8fr 0.9fr 0.2fr 0.6fr 1fr 1fr 1fr;
     grid-auto-flow: row;
