--- a/style.css
+++ b/style.css
@@ -275,7 +275,7 @@ li {
 }
 
 .resume a {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -304,16 +304,16 @@ li {
   opacity: 1;
   position: absolute;
 
-  stroke-dasharray: 4000;
-  stroke-dashoffset: 4000;
-  animation: animate 3s forwards;
+  /* stroke-dasharray: 4000; */
+  /* stroke-dashoffset: 4000; */
+  /* animation: animate 3s forwards;  */
 }
-
+/* 
 @keyframes animate {
   to {
     stroke-dashoffset: 0;
   }
-}
+} */
 
 .hello {
   width: 100%;
@@ -834,7 +834,7 @@ input {
   height: 150px;
   display: flex;
   border-radius: 35px;
-  padding: 8px 10px;
+  padding: 8px 15px;
   overflow: hidden;
   top: 50%;
   left: 50%;
@@ -1054,6 +1054,11 @@ input {
   .moon {
     width: 350px;
   }
+
+  .contact img {
+    width: 170px;
+    top: 50.7%;
+  }
 }
 
 /* --------------- MEDIUM DISPLAYS --------------- */
@@ -1147,7 +1152,7 @@ input {
   }
 
   .profile .profile-about p {
-    font-size: 1.6rem;
+    font-size: 1.7rem;
     padding-top: 1rem;
     line-height: 20px;
     padding-inline: 2rem;
@@ -1458,4 +1463,19 @@ body.dark {
 
 .dark .button-copy.copied {
   background: rgba(255, 255, 255, 0.4);
+}
+
+.dark .contact .button a {
+  color: #f90202;
+  background: rgba(226, 32, 37, 0.15);
+  font-weight: 200;
+}
+
+.dark .contact .button a:hover {
+  background: rgba(226, 32, 37, 0.3);
+}
+
+.dark .clock span {
+  color: #c41819;
+  font-weight: 400;
 }
